loopwhile.BaggleSeeker.scala.error
Compilation error:
BaggleSeeker:1: error: missing arguments for method != in class Object;
follow this method with `_' if you want to treat it as a partially applied function
while (!=estSurBiscuit()) {
       ^